# Effective-cpp-test

./: .gitignore  CMakeLists.txt  test-type-info.cpp  test.cpp  testXORLinkedList.cpp
lib/: CMakeLists.txt  address.h  log.h  myswaptest.cpp  myswaptest.h  mytimer.cpp  mytimer.h  myxorlinkedlist.h  pointwatcher.h  prototype.h
lib/mysql/: CMakeLists.txt  mysqldatabase.cpp  mysqldatabase.h  mysqlerror.cpp  mysqlerror.h  mysqlquery.cpp  mysqlquery.h  mysqlresult.cpp  mysqlresult.h
